[package]
name = "ghw-swh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1.4"
hex = "0.4.3"
rayon = "1.11.0"
reqwest = "0.12.24"
serde_json = "1.0.145"
swh-digestmap = "0.1.4"
swh-graph = "8.0.10"
swh-graph-stdlib = "8.0.10"
tokio = { version = "1.48.0", features = ["full"] }
